# ai-rag-system

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  uninstall.sh
docs/: AI_RAG_System_Docker_Guide.docx
documents/: machine_learning.md  python_basics.txt
scripts/: backup.sh  entrypoint.sh  generate-certs.sh  healthcheck.sh  setup.sh
src/rag_system/: __init__.py  __main__.py  cli.py  config.py  document_loader.py  models.py  rag_engine.py  text_chunker.py  vector_store.py  web.py
src/rag_system/static/: app.js  style.css
src/rag_system/templates/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_document_loader.py  test_integration.py  test_main.py  test_models.py  test_rag_engine.py  test_text_chunker.py  test_vector_store.py  test_web.py
tests/e2e/: conftest.py  test_chat_flow.py  test_document_management.py  test_model_selector.py  test_upload_flow.py
